# IC-Projeto-2

./: AudioPredictors.h  BitSet.h  BitStream.h  CMakeLists.txt  GolombCoder.h  README.md  golomb_efficiency.cpp  golomb_test.cpp  img_codec.cpp  img_cpy.cpp  img_effects.cpp  wav_golomb.cpp
audio-results/: histrogram_audio.asv  histrogram_audio.m
draft-code/: AudioCodec.cpp  AudioCodec.hpp  BitStream.cpp  BitStream.hpp  Golomb.cpp  Golomb.hpp  matplotlibcpp.h  testAudioCodec.cpp  testGolomb.cpp
images-results/: histogram_img.m
